Closed
Bug 257058
Opened 22 years ago
Closed 22 years ago
Eudora import does not properly handle text/enriched messages
Categories
(Thunderbird :: Migration, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird0.8
People
(Reporter: kelson, Assigned: mscott)
Details
Attachments
(1 file)
|
569 bytes,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.7) Gecko/20040803 Firefox/0.9.3
Build Identifier: version 0.7.3 (20040803)
Eudora encodes text/enriched messages by stripping the mime type and adding
<x-rich>...</x-rich>. These are not handled at all in Thunderbird 0.7.3 (it
treats them as plain text), and the fix for bug 3157 incorrectly treats them as
HTML.
Reproducible: Always
Steps to Reproduce:
1. Send a text/enriched message to Eudora
2. Import mail from Eudora into Thunderbird
Actual Results:
Message is plaintext with markup (including x-rich tags)
Expected Results:
Message should appear as rich-text.
Manually changing the mailbox file with a text editor to set the content-type
resolves the problem.
It looks like taking the code from bug 3157 and just changing the
tag-to-mimetype map so that x-rich maps to text/enriched instead of text/html
should do it.
| Assignee | ||
Comment 1•22 years ago
|
||
can you try a 0.8 nightly build. I thought I fixed this for 0.8:
http://ftp.mozilla.org/pub/mozilla.org/thunderbird/nightly/latest-0.8/
| Assignee | ||
Updated•22 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → Thunderbird0.9
Just tried it with a nightly. No, it comes through as text/html. And since most
tags for text/enriched content aren't *in* HTML, and newlines are supposed to
mean something, all the text is run together with no formatting. (Not that it
seems to render all tags even with the correct mimetype manually added, but it
at least handles things like line breaks, bold, center, and underline.)
I can't attach the entire message, since the only example I have includes
account information, but I can give you an example with filler text:
<x-rich><bold>This is a heading
</bold>Buncha text blah blah blah lorem ipsum etc. all that latin stuff that I'm
sure would look better than the filler I'm writing. uasfhiu kjfhf ihuwef sudfh
sdafudsahf ushf udsfh kusdhf ufhd kjdshf sakdhf iuhef kjdhsf khdfsa d fjkhdsf
fhiu kjfhf ihuwef sudfh sdafudsahf ushf udsfh kusdhf ufhd kjdshf sakdhf iuhef
kjdhsf khdfsa sakdhf iuhef kjdhsf khdfsa d fjkhdsf fhiu kjfhf ihuwef sudfh
sdafudsahf
<bold><underline>Another line!</underline></bold>
ufhd kjdshf sakdhf iuhef kjdhsf khdfsa d fjkhdsf fhiu kjfhf ihuwef sudfh
kjhdsafkhy shf udsfh kusdhf ufhd kjdshf sakdhf iuhef kjdhsf khdfsa sakdhf
</x-rich>
Comment 3•22 years ago
|
||
I just tested this with the latest 0.8 (from the link above) and am still having
issues with certain messages. Here's an example message from Eudora 6.1, in
it's entirety. Notice the lack of MIME type (it's an outgoing message) which
tells me it doesn't belong in this bug. Should this be filed in a further
separate bug, or was 3157 closed prematurely?
From ???@??? Mon Aug 09 12:59:25 2004
To: "Lightspeed Technical Support" <XXXXXXXX@lightspeed.ca>
From: Michael Newton <XXXXXXXXX@eire.ca>
Subject: Re: What's up
Cc:
Bcc:
X-Attachments:
In-Reply-To: <002001c47e31$9564b940$d6d535d1@stud>
References: <002001c47e31$9564b940$d6d535d1@stud>
Message-Id: <6.1.2.0.2.20040809125220.028cfed0@pop.lightspeed.ca>
X-Eudora-Signature: <Standard>
<html>
<body>
<font face="arial" size=2>I</font><font face="Bitstream Vera Sans">'m off next
Tuesday, Wednesday, Thursday.<br>
You might find this funny. I was having trouble getting TV to work on that
card I bought, this is what I found out:</font>
<dl>
<dd><font face="Bitstream Vera Serif">Terminal Services must be removed from the
system in order to use the ATI TV Player. <br>
<dd>By design, Microsoft Terminal Services disables all audio redirection when
installed. Any services or devices that redirect audio will fail to load under
these conditions.<br>
<dd>The ATI WDM audio devices are used by the ATI TV Player to redirect audio.
These required devices will fail to load if Terminal Services are installed.</font>
</dl><font face="Bitstream Vera Sans">Isn't that just great?<br><br>
mike.<br><br>
</font></body>
</html>
| Assignee | ||
Comment 4•22 years ago
|
||
| Assignee | ||
Comment 5•22 years ago
|
||
Kevin, I just checked this potential fix into the trunk. Can you do me a big
favor and test this out in tomorrow's trunk nightly? If it looks good I'd really
like to get it into thunderbird 0.8 before it's release RSN.
Thanks!
Look for the nightly here:
http://ftp.mozilla.org/pub/mozilla.org/thunderbird/nightly/latest-trunk/
it will be dated August 31st with the fix.
Importing with today's build, the message displays fine, but the first line is
missing. It looks like it's removing the entire line that begins with <x-rich>
instead of just that tag.
On the other hand, it seems to do the same thing to <x-flowed> messages as well,
so I should probably search for or open a new bug for that.
| Assignee | ||
Comment 7•22 years ago
|
||
thanks for testing kevin. I'm going to mark this fixed. I just put it on the
aviary branch and you already filed a new bug for the remaining issue.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Target Milestone: Thunderbird0.9 → Thunderbird0.8
Comment 8•22 years ago
|
||
(In reply to comment #7)
> you already filed a new bug for the remaining issue.
That's bug 257555 for those following along at home.
You need to log in
before you can comment on or make changes to this bug.
Description
•