Bug #257058 --> When importing eudora messages, map <x-rich> to text/enriched instead of text/html.